[package]
name = "wasm-game-of-life-2"
version = "0.1.0"
authors = ["1halfplusminus <sautron.gael@laposte.net>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib","dylib"]
path= "src/main.rs"

[[bin]]
name = "quad"
path = "src/main.rs"

[dependencies]

winit = { version = "0.24", features=["web-sys"] }

gfx-hal = {  package = "gfx-hal",version="0.7.0", git = "https://github.com/gfx-rs/gfx"}

auxil = {  package = "gfx-auxil",version="0.8.0", git = "https://github.com/gfx-rs/gfx"}

serde = { version = "~1.0.115", features = ["derive"] }

log=""

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.8"


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.49"
backend = {version = "0.7", git = "https://github.com/gfx-rs/gfx",package = "gfx-backend-gl"}
wasm-bindgen = "0.2.72"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
package="web-sys"

[target.'cfg(target_os = "android")'.dependencies.backend]
git = "https://github.com/gfx-rs/gfx"
version = "0.7"
package = "gfx-backend-vulkan"

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.backend]
git = "https://github.com/gfx-rs/gfx"
version = "0.7"
features = ["cross"]
package = "gfx-backend-gl"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.backend]
features = ["cross"]
version = "=0.7"
git = "https://github.com/gfx-rs/gfx"
package="gfx-backend-metal"


[target.'cfg(windows)'.dependencies.backend]
version = "0.7"
git = "https://github.com/gfx-rs/gfx"
package="gfx-backend-dx12"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
